@@ -9,6 +9,8 @@ Revision history for Perl extension App::Sqitch
        user may not have such permission, and instead attempts to create the
        function and ignores a failure due to a lack of permission. Thanks to
        Alastair Douglas for the report and solution (#874)!
+     - Added missing CockroachDB templates. Thanks to @Peterbyte for the
+       report (#878)!
 
 1.5.1  2025-03-16T26:55:17Z
      - Fixed a bug introduced in v1.5.0 where the MySQL engine connected to
